# miniclang

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Makefile  lexer.cpp  main.cc  main.cpp  source_location.cpp  token.cpp
src/include/: lexer.h  source_location.h  source_manager.h  token.h
test/: CMakeLists.txt
test/bash/: CMakeLists.txt  test.sh
test/python/: CMakeLists.txt  test_basic.py
